Fix IE 10 bug where message was not centered. Must define width with margin: auto in IE 10

--- a/src/htdocs/css/latesteqs/_Catalog.scss
+++ b/src/htdocs/css/latesteqs/_Catalog.scss
@@ -18,7 +18,7 @@
 
 @media screen and (min-width: 640px) {
   .map-message {
-    max-width: 50%;
+    width: 624px;
     margin: 0.5em auto;
   }
 }
